FEAT: finish section 1.1.3.

--- a/review.adoc
+++ b/review.adoc
@@ -53,16 +53,14 @@ When it comes to interface building, declarative VID specification tends to matc
 
 #### Hidden dependencies
 
-WARNING: Looks too far-fetched; spread between error-proness (e.g. binding) and difuseness (e.g. VID vs. RebGUI).
-
 > Are dependencies between entities in the notation visible or hidden? Is every dependency indicated in both directions? Does a change in one area of the notation lead to unexpected consequences?
 
 If we consider VID as a notation, then the entities in it exist in two different forms: at the top level, these are layout positioning commands, style definitions, and face descriptions, which can be generalized under the term _specification_; at the lower level, it is the virtual tree of faces to which a set of specifications is compiled by a dialect processor (`layout` or `view`).
 
 As such, dependencies can exist between entities on either level of abstraction:
 
-- between the elements of specifications;
-- between the faces in a virtual tree, or between their facets.
+- between the specifications;
+- between the faces in a virtual tree.
 
 Within a VID block, specifications are well-isolated between each other and follow a pre-defined format: container settings at the top, followed by style declarations and face-specific specs. However, a minor dependency lurking in there is the _positioning_ of facet values and options, as well as the placement of specifications relative to each other that influences the interface layout, unless the keywords that specify an absolute positioning are used.
 
@@ -70,37 +68,17 @@ To illustrate the point: inside a given VID specification, both background and f
 
 By extension, when one specification follows another, its associated widget is placed either below or to the right of its predecessor, according to the current layout mode. This relation of succession is imposed by the linearity of the notation, which is position-dependent. This dependency, however, is visible and is an intentional part of dialect's design.
 
-The content of specification, rather than its relative positioning, can also implicitly infuence widget's properties. For example, `slider` or `progress` faces can become either vertical or horizontal, depending on which of its dimensions, denoted by a `pair!` value, is larger; on Win32 backend, size of the `calendar` widget changes the style of its display.
-
-Any given specification includes information about widget's positioning, the content of its facets, and provided event handlers. Parelleling the HTML/CSS/JS trichotomy, we might call these aspects _structure_, _style_ and _substance_, which in VID tend to be conflated at the level of description. On the one hand, this leads to a more compact and human-friendly code; together with View engine's automatic handling of many GUI aspects, this constitutes an integral part of VID's appeal. On the other hand, such absence of modularity makes position-dependency of notational elements even more apparent.footnote:[Taking a certain ontological stance, one can name these aspects _essences_ that, when combined, form the notational entities.] In turn, the excess of hand-holding prevents any sort of fine-grained control over the user interface.
-
-On the other side of the spectrum, virtual tree of faces clearly separates the outlined aspets and is more granular, at the expence of being less expressive (in terms of notational qualities) than a VID block. A middle ground would be a new kind of dialect, designed with ease of code generation in mind (e.g. for high-level compilers that would target this dialect), where description of each aspect is notationally rich, reactive, and non-hierarchical, yet exists independently from all the others.footnote:[Henrik Mikael Kristensen https://gitter.im/red/red?at=5f749a589331433de02abdd6[discusses] a similar tripartite and layered approach in the design of a Draw-based dialect. Rudiments of such modularity are also present in http://www.dobeash.com/rebgui.html[RebGUI] system built on top of Rebol/View.]
-
 If we take face as a notational entity, then hierarchical dependencies between faces are cleary indicated in the virtual tree of faces: `pane` facet contains a list of child faces arranged in a Z-order, and `parent` facet of a child face holds a backlink to its parent face.
 
-Dependencies on reactive sources to which a given face can react during event processing can be discerned from `actors` facet. In turn, `react?` function can be used on a specific facet to see in what relation it acts as a source. Yet, long-range dependencies remain invisible. Event handlers are specified explicitly and are also visible in `actors` facet; but handlers can also be installed globally, in such case they become a hidden dependency.
+Dependencies on reactive sources to which a given face can react during event processing can be discerned from `actors` facet. In turn, `react?` function can be used on a specific facet to see in what relation it acts as a source. Yet, long-range dependencies remain invisible, and could be explicated by a graph vizualisation of reactive relations. Event handlers are specified explicitly and are also visible in `actors` facet; but handlers can also be installed globally, in such case they become a hidden dependency.
 
 Objects in Red act more like namespaces, and so there is no dependency or inheritance chain between a given object and a prototype from which it was derived. This nips the https://en.wikipedia.org/wiki/Fragile_base_class[fragile base class] problem (given as a classical example of hidden dependency in 7GUIs thesis) in the bud.
 
-One notable feature is auto-synchronization kept by View engine between `data` and `text` facets in `text` and `field` faces. Done for the sake of convenience, it nevertheless is not explicitly indicated in VID specification or face state, and therefore forms a hidden dependency.
-
-Arguably, the most problematic hidden dependency present in Red GUI system is it's reliance on language's name resolution mechanism called "binding" or sometimes "definitional scoping" coupled with an absence of modules or easy ways to localize names without writing boilerplate code. Symbolic identifiers introduced in VID block (for example, in the body of an event handler) by default resolve to the global namespace, and often tend to shadow other definitions, which sometimes leads to hard to catch bugs.footnote:[See one of the https://github.com/red/red/issues/972#issuecomment-650814221[examples] on Red issue tracker, derived during implementation of the link:tasks/CRUD.red[CRUD] task.] Granted, this problem is not unique to VID, but rather presents a historical design challenge in the Rebol family of languages.
-
 Conceptually, hidden dependency is a broken symmetry that acts as an inhibitor of the finding process: once a change to the notational entity is made, consequences of such change, if not already apparent from the outset, need to be deduced by following the one-way causal relationships with other entities, which might not even be indicated at all.
 
-Environmental clues, such as up-to-date and readily-available reference documentation, as well as Integrated Development Environment (IDE), provide a compensatory function for such search costs, to a certain extent.
+Environmental clues, such as embedded docstrings and integrated help system, as well as Integrated Development Environment (IDE) facilities, provide a compensatory function for such search costs, to a certain extent. This is the general line of development that Red and its eDSLs seem to pursue even in their nascent state: aiming at living environments rather than static artefacts, favoring interactive tools over supplemental tutorials.
 
-NOTE: TBD.
-
-Documentation -> compensatory function for a search cost of a hidden dependency, w/o sacrificing VID's notational qualities (tersness, implicitness, directness and semantic density). Hidden dependency is one-way and local; it is a slowing down of information search. Are tolerable during creation, but not modification, esp. for programming in the large.
-
-Hidden dependencies are delegated to reference documentation which the user is assumed to consult. But there's no embedded, interactive documentation for VID (or any other dialect), nor a "bird's eye overview" indication of dependencies. An unsolved problem in genral for eDSLs in Red. IDE, tooltips. Link to some experiments and PoC from e.g. @toomasv.
-
-In a certrain sense, knowledge of behavior and various subleties is a hidden dependency of a programmer on reference docs. Cognitive overhead of learning DSLs. Terseness, implicitness, elegance and tacicity are notational qualities, which might become a stumbling block for beginners. OTOH, too much explicity and it becomes a burden in general cases. Data-oriented -> values encode semantics.
-
-(In)expectancy in Red (and, by extension, VID) are almost always tied to (in)experience.
-
-Backlink from face to VID spec that it was generated from (if any), e.g. an index into a VID block, which can also be reactive. Bx, lenses (why tho?).
+Compact and human-friendly code constitutes an integral part of VID's appeal; overloading it with an explicit information and mandatory constructs would indicate hidden dependencies more clearly, at the expence of becoming extremely scrupulous and sacrificing dialect's notational qualities, such as expressive directness and semantic density.
 
 #### Error-proneness
 
@@ -115,6 +93,10 @@ modification w/o `copy` (shared series buffers), no type-checking for face's fie
 Forgetting that VID is a DSL, trying to embed regular Red code.
 
 The question of GUI testing: manual, automatic, link to Boris' work. Existence of a null backend.
+
+Arguably, the most problematic hidden dependency present in Red GUI system is it's reliance on language's name resolution mechanism called "binding" or sometimes "definitional scoping" coupled with an absence of modules or easy ways to localize names without writing boilerplate code. Symbolic identifiers introduced in VID block (for example, in the body of an event handler) by default resolve to the global namespace, and often tend to shadow other definitions, which sometimes leads to hard to catch bugs.footnote:[See one of the https://github.com/red/red/issues/972#issuecomment-650814221[examples] on Red issue tracker, derived during implementation of the link:tasks/CRUD.red[CRUD] task.] Granted, this problem is not unique to VID, but rather presents a historical design challenge in the Rebol family of languages.
+
+One notable feature is auto-synchronization kept by View engine between `data` and `text` facets in `text` and `field` faces. Done for the sake of convenience, it nevertheless is not explicitly indicated in VID specification or face state, and therefore forms a hidden dependency.
 
 #### Diffuseness
 
@@ -321,6 +303,14 @@ When it comes to interface building, declarative VID specification tends to matc
 ---
 
 Accessibility, localization (cf. RebGUI)
+
+---
+
+The content of specification, rather than its relative positioning, can also implicitly infuence widget's properties. For example, `slider` or `progress` faces can become either vertical or horizontal, depending on which of its dimensions, denoted by a `pair!` value, is larger; on Win32 backend, size of the `calendar` widget changes the style of its display.
+
+Any given specification includes information about widget's positioning, the content of its facets, and provided event handlers. Parelleling the HTML/CSS/JS trichotomy, we might call these aspects _structure_, _style_ and _substance_, which in VID tend to be conflated at the level of description. On the one hand, this leads to a more compact and human-friendly code; together with View engine's automatic handling of many GUI aspects, this constitutes an integral part of VID's appeal. On the other hand, such absence of modularity makes position-dependency of notational elements even more apparent.footnote:[Taking a certain ontological stance, one can name these aspects _essences_ that, when combined, form the notational entities.] In turn, the excess of hand-holding prevents any sort of fine-grained control over the user interface.
+
+On the other side of the spectrum, virtual tree of faces clearly separates the outlined aspets and is more granular, at the expence of being less expressive (in terms of notational qualities) than a VID block. A middle ground would be a new kind of dialect, designed with ease of code generation in mind (e.g. for high-level compilers that would target this dialect), where description of each aspect is notationally rich, reactive, and non-hierarchical, yet exists independently from all the others.footnote:[Henrik Mikael Kristensen https://gitter.im/red/red?at=5f749a589331433de02abdd6[discusses] a similar tripartite and layered approach in the design of a Draw-based dialect. Rudiments of such modularity are also present in http://www.dobeash.com/rebgui.html[RebGUI] system built on top of Rebol/View.]
 
 ---
 
